--- a/src/app/components/women/women.component.html
+++ b/src/app/components/women/women.component.html
@@ -3,9 +3,9 @@
 <div class="outer">
   <div class="main-content container-fluid">
     <div class="row">
-      <div class="main-content-categories d-none d-lg-block col-md-2">
+      <div class="main-content-categories d-none d-lg-block col-md-2">   <!---->
         <!--      <app-women-categories></app-women-categories>-->
-        <p>Women component categories</p>
+        <p>Women sub categories</p>
         <mat-grid-list cols="1" rowHeight="5:1">
           <mat-grid-tile *ngFor="let item of subCategoryData">
             <div class="grid-content item-image col-12" style="height: 30px">{{subCategoryData}}</div>
