--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-4">
-            <button type="submit" (click)="getPasswordForUsername()" style="width: 100%; margin: 10px" color="primary" mat-raised-button>Login</button>
+            <button routerLink="/main/home" type="submit" (click)="getPasswordForUsername()" style="width: 100%; margin: 10px" color="primary" mat-raised-button>Login</button>
           </div>
         </div>
         <div class="row justify-content-center">
